[metadata]
name = universal_tsdb
version = 0.1.0
description = A Universal Time-Series Database Python Client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gmasse/universal-tsdb
author = Germain Masse
author-email = g-dev@masse.me
keywords = timeseries-database, time-series, python, influxdb, warp10
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules
    Natural Language :: English

[options]
python_requires = >=3.6
packages = find:
install_requires =
    requests

[options.extras_require]
dev =
    pylint
    pytest
